test/src/e2e_vm_tests/test_programs/should_fail/insufficient_type_info/src/main.sw
script;

fn foo<T>() {
    let x = size_of::<T>();
}

fn main() {
    foo()
}
